--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.7",
+    "@types/styled-system": "^5.1.9",
     "commitlint": "^8.3.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -88,18 +89,23 @@
           "singleQuote": true,
           "tabWidth": 2,
           "trailingComma": "es5",
-          "useTabs": false
+          "useTabs": false,
+          "semi": false
         }
       ]
     }
   },
-  "eslintIgnore": ["node_modules/", "lib/"],
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ],
   "prettier": {
     "quoteProps": "consistent",
     "singleQuote": true,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "useTabs": false
+    "useTabs": false,
+    "semi": false
   },
   "release-it": {
     "git": {
@@ -121,6 +127,17 @@
   "@react-native-community/bob": {
     "source": "src",
     "output": "lib",
-    "targets": ["commonjs", "module", "typescript"]
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
+  },
+  "dependencies": {
+    "@emotion/core": "^11.0.0-next.10",
+    "@emotion/native": "^11.0.0-next.12",
+    "@emotion/react": "11.0.0-next.12",
+    "emotion-theming": "^11.0.0-next.6",
+    "styled-system": "^5.1.5"
   }
 }
