bring in stories from current components

--- a/example/package.json
+++ b/example/package.json
@@ -37,7 +37,7 @@
   },
   "config": {
     "react-native-storybook-loader": {
-      "pattern": "./storybook/*.stories.js",
+      "pattern": "./stories/**/*.stories.js",
       "outputFile": "./storybook/storyLoader.js"
     }
   }
